# skribe

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/client/: main.rs
src/lib/: lib.rs  state.rs
src/lib/auth/: mod.rs  request.rs  response.rs  routes.rs
src/server/: main.rs
