[package]
name = "skribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
name = "skribe"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["headers"] }
base64 = "0.21.3"
chrono = "0.4.28"
config = "0.13.3"
dirs = "5.0.1"
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
once_cell = "1.18.0"
openssl = "0.10.57"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
